GDHI-87: Fix Alignment of Countryname for Country Profile page <Shaswat>

--- a/src/components/countryProfile/country-profile.scss
+++ b/src/components/countryProfile/country-profile.scss
@@ -48,6 +48,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+        align-self: center;
         @include margin-left(30px);
         #collected-date {
           font-size: 12px;
